--- a/home.html
+++ b/home.html
@@ -7,6 +7,12 @@
         <!-- Author: kneecaps#5974 -->
     </head>
     <body>
-        <p>test</p>
+        <p class=''>kneecaps</p>
+        <p class=''>14-year-old upcoming software engineer</p>
+        <ul style='list-style-type: none;' class=''>
+            <li>discord</li>
+            <li>portfolio</li>
+            <li>text here</li>
+        </ul>
     </body>
 </html>
