--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Portfolio</title>
         <link rel='stylesheet' href='style.css'>
-        <link rel='icon' href=''>
+        <link rel='icon' href='https://cdn-icons-png.flaticon.com/512/25/25231.png'>
         <!-- Author: kneecaps#5974 -->
     </head>
     <body>
