more stuff i dont think i need to specify lol

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <p class=''>kneecaps</p>
         <p class=''>14-year-old upcoming software engineer</p>
-        <ul style='list-style-type: none;' class=''>
+        <ul class='navBar'>
             <li>discord</li>
             <li>portfolio</li>
             <li>text here</li>
