--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     </head>
     <body>
         <p class=''>kneecaps</p>
+        <p class=''>html, css, java</p>
         <p class=''>14-year-old upcoming software engineer</p>
         <ul class='navBar'>
-            <li>discord</li>
-            <li>portfolio</li>
-            <li>text here</li>
+            <li><a href=''>discord</a></li>
+            <li><a href=''>portfolio</a></li>
+            <li><a href=''>idk</a></li>
         </ul>
     </body>
 </html>
