--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
     <head>
         <title>My Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='style.css'>
         <link rel='icon' href='https://cdn-icons-png.flaticon.com/512/25/25231.png'>
         <!-- Author: kneecaps#5974 -->
     </head>
     <body>
         <p class=''>kneecaps</p>
-        <p class=''>html, css, java</p>
-        <p class=''>14-year-old upcoming software engineer</p>
-        <ul class='navBar'>
+        <p class=''>html, java</p>
+        <p class=''>14-year-old programmer</p>
+        <div class='navBar'>
             <li><a href=''>discord</a></li>
             <li><a href=''>portfolio</a></li>
             <li><a href=''>idk</a></li>
-        </ul>
+        </div>
     </body>
 </html>
