containers, description, new navBar changes

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
         <!-- Author: kneecaps#5974 -->
     </head>
     <body>
-        <p class=''>kneecaps</p>
-        <p class=''>html, java</p>
-        <p class=''>14-year-old programmer</p>
-        <div class='navBar'>
-            <li><a href=''>discord</a></li>
-            <li><a href=''>portfolio</a></li>
-            <li><a href=''>idk</a></li>
+        <div class='container'>
+            <div class='content'>
+                <p class=''>kneecaps</p>
+                <div class='bio'>
+                    <p class=''>html, java</p>
+                </div>
+                <p class=''>14-year-old programmer</p>
+                <div class='navBar'>
+                    <a href=''>discord</a>
+                    <a href=''>portfolio</a>
+                    <a href=''>idk</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
