uploaded files from local

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>My Portfolio</title>
+        <title>kneecaps | Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='style.css'>
         <link rel='icon' href='https://cdn-icons-png.flaticon.com/512/25/25231.png'>
@@ -10,15 +10,13 @@
     <body>
         <div class='container'>
             <div class='content'>
-                <p class=''>kneecaps</p>
-                <div class='bio'>
-                    <p class=''>html, java</p>
+                <h1>kneecaps</h1>
+                <div class='desc'>
+                    <p>14 year old Programmer</p>
                 </div>
-                <p class=''>14-year-old programmer</p>
                 <div class='navBar'>
-                    <a href=''>discord</a>
-                    <a href=''>portfolio</a>
-                    <a href=''>idk</a>
+                    <a href='comingsoon.html'>discord</a>
+                    <a href='comingsoon.html'>portfolio</a>
                 </div>
             </div>
         </div>
