--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>kneecaps | Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='style.css'>
-        <link rel='icon' href='https://cdn-icons-png.flaticon.com/512/25/25231.png'>
+        <link rel='icon' href='https://raw.githubusercontent.com/kneecaps5974/kneecaps5974.github.io/main/kneecapscat.png'>
         <!-- Author: kneecaps#5974 -->
     </head>
     <body>
