--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
         <title>kneecaps | Portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='style.css'>
-        <link rel='icon' href=''>
+        <link rel='icon' href='https://raw.githubusercontent.com/kneecaps5974/kneecaps5974.github.io/main/kneecapscat.png'>
         <!-- Author: kneecaps#5974 -->
     </head>
     <body>
