--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div class='navBar'>
                     <a href='comingsoon.html'>discord</a>
                     <a href='comingsoon.html'>portfolio</a>
+                    <a href='mailto:kneecaps5974@hotmail.com'>email</a>
                     <a href='https://github.com/kneecaps5974/kneecaps5974.github.io'>source code</a>
                 </div>
             </div>
