--- a/comingsoon.html
+++ b/comingsoon.html
@@ -2,6 +2,7 @@
 <html lang='en'>
     <head>
         <title>Coming Soon...</title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='style.css'>
         <link rel='icon' href='https://raw.githubusercontent.com/kneecaps5974/kneecaps5974.github.io/main/kneecapscat.png'>
