--- a/discord.html
+++ b/discord.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class='container'>
-            <img style='border-radius: 200px; float: inline-start;' height='20%' width='20%' src='https://cdn.discordapp.com/avatars/485619082545332246/b2618307ead0e61384d453d88ef38a78.png?size=1024' alt='Discord Avatar'>
+            <img style='border-radius: 200px;' height='200px' width='200px' src='https://cdn.discordapp.com/avatars/485619082545332246/b2618307ead0e61384d453d88ef38a78.png?size=1024' alt='Discord Avatar'>
             <h1>kneecaps<span style='color: grey;'>#5974</span></h1>
         </div>
     </body>
