--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <p>14 year old Programmer</p>
                 </div>
                 <div class='navBar'>
-                    <a href="comingsoon.html" target="_blank" rel="noopener noreferrer">discord</a>
+                    <a href="discord.html" target="_blank" rel="noopener noreferrer">discord</a>
                     <a href="comingsoon.html" target="_blank" rel="noopener noreferrer">portfolio</a>
                     <a href="mailto:kneecaps5974@hotmail.com" target="_blank" rel="noopener noreferrer">email</a>
                     <a href="https://github.com/kneecaps5974/kneecaps5974.github.io" target="_blank" rel="noopener noreferrer">source code</a>
