--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p>14 year old Programmer</p>
             </div>
             <div class='navBar'>
-                <a href="discord.html">discord</a>
+                <a href="discord">discord</a>
                 <a href="comingsoon.html">portfolio</a>
                 <a href="mailto:kneecaps5974@hotmail.com">email</a>
                 <a href="https://github.com/kneecaps5974/kneecaps5974.github.io">source code</a>
