--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class='navBar'>
                 <a href="discord">discord</a>
-                <a href="comingsoon.html">portfolio</a>
+                <a href="comingsoon">portfolio</a>
                 <a href="mailto:kneecaps5974@hotmail.com">email</a>
                 <a href="https://github.com/kneecaps5974/kneecaps5974.github.io">source code</a>
             </div>
