--- a/discord.html
+++ b/discord.html
@@ -11,7 +11,7 @@
     <body>
         <div class='container'>
             <a style='margin-right: 15px;' href='https://kneecaps5974.github.io'><h1 class='backButton'>&lt; back</h1></a>
-            <img style='border-radius: 200px;' height='200px' width='200px' src='https://raw.githubusercontent.com/kneecaps5974/kneecaps5974.github.io/main/discordavatar.png' alt='Discord Avatar'>
+            <img style='border-radius: 200px;' height='200px' width='200px' src='https://raw.githubusercontent.com/kneecaps5974/kneecaps5974.github.io/main/kneecaps5974_avatar.jpg' alt='Discord Avatar'>
             <h1>kneecaps<span style='color: grey;'>#5974</span></h1>
         </div>
     </body>
