--- a/comingsoon.html
+++ b/comingsoon.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class='container'>
-            <a href='https://kneecaps5974.github.io'><h1 class='backButton'>&lt; back</h1></a>
+            <a href='https://jazzy5974.github.io'><h1 class='backButton'>&lt; back</h1></a>
             <h1 style='font-size: 50px;'>Coming Soon...</h1>
             <div class='desc'>Wait a bit!</div>
         </div>
