--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='style.css'>
-        <link rel='icon' href='https://raw.githubusercontent.com/kneecaps5974/kneecaps5974.github.io/main/kneecapscat.png'>
+        <link rel='icon' href='https://raw.githubusercontent.com/jazzy5974/jazzy5974.github.io/main/kneecapscat.png'>
         <!-- Author: kneecaps#5974 -->
     </head>
     <body>
@@ -17,7 +17,7 @@
             <div class='navBar'>
                 <a href="discord">discord</a>
                 <a href="mailto:kneecaps5974@hotmail.com">email</a>
-                <a href="https://github.com/kneecaps5974/kneecaps5974.github.io">source code</a>
+                <a href="https://github.com/jazzy5974/jazzy5974.github.io">source code</a>
             </div>
         </div>
     </body>
