--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-        <title>kneecaps | Home</title>
+        <title>jazzy | Home</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='style.css'>
@@ -10,9 +10,9 @@
     </head>
     <body>
         <div class='container'>
-            <h1>kneecaps</h1>
+            <h1>jazzy</h1>
             <div class='desc'>
-                <p>15</p>
+                <p>aka kneecaps</p>
             </div>
             <div class='navBar'>
                 <a href="discord">discord</a>
