--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class='navBar'>
                 <a href="discord">discord</a>
                 <a href="mailto:kneecaps5974@hotmail.com">email</a>
+                <a href="https://linkedin.com/in/jasminemontrichard">linkedin</a>
                 <a href="https://github.com/jazzy5974/jazzy5974.github.io">source code</a>
             </div>
         </div>
