--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class='container'>
             <h1>jazzy</h1>
             <div class='desc'>
-                <p>aka kneecaps</p>
+                <p>student</p>
             </div>
             <div class='navBar'>
                 <a href="discord">discord</a>
